--- a/frontend/src/components/Footer/footer.css
+++ b/frontend/src/components/Footer/footer.css
@@ -3,7 +3,7 @@
     display: flex;
     background-color: var(--footer-bcg-color);
     padding: 32px 104px 48px;
-    color: #fff;
+    color: var(--alternative-text-color);
 }
 
 .footer--hr {
@@ -85,7 +85,7 @@
     display: flex;
     flex-direction: column;
     margin: 31px 0;
-    color: #959595;
+    color: var(--secondary-text-color);
     gap: 14px;
 }
 
@@ -106,7 +106,7 @@
         display: block;
         width: 100%;
         height: 1px;
-        background-color: #fff;
+        background-color: var(--alternative-text-color);
         margin: 32px 0;
     }
 
