--- a/frontend/src/css/reset.css
+++ b/frontend/src/css/reset.css
@@ -9,8 +9,7 @@ h6,
 p {
     margin: 0;
     padding: 0;
-    font-family: 'Geologica', sans-serif;
-    font-weight: 400;
+    font-family: var(--text-font), sans-serif;
     font-size: 16px;
 }
 
