--- a/frontend/src/css/button.css
+++ b/frontend/src/css/button.css
@@ -1,8 +1,8 @@
 .button {
+    display: inline-block;
     cursor: pointer;
     border: 0;
     border-radius: 4px;
-    height: 100%;
     padding: 10px 16px;
     font-family: var(--text-font), sans-serif;
     font-size: 16px;
