--- a/frontend/src/css/button.css
+++ b/frontend/src/css/button.css
@@ -3,12 +3,19 @@
     cursor: pointer;
     border: 0;
     border-radius: 4px;
-    padding: 10px 16px;
     font-family: var(--text-font), sans-serif;
     font-size: 16px;
+}
+
+.button__primary-padding {
+    padding: 10px 16px;
 }
 
 .button__primary-color {
     background-color: var(--primary-text-color);
     color: var(--alternative-text-color);
+}
+
+.button__transparent-color {
+    background-color: transparent;
 }
