--- a/frontend/src/pages/NotFound/notFound.css
+++ b/frontend/src/pages/NotFound/notFound.css
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: row;
     color: var(--gray-text-color);
+    margin: 120px 238px;
 }
 
 .not-found--title {
@@ -35,4 +36,36 @@
     font-weight: 400;
     line-height: 20px;
     margin-bottom: 24px;
+}
+
+@media screen and (max-width: 1481px) {
+    .not-found--container {
+        flex-direction: column;
+        align-items: center;
+        margin: 104px 105px;
+    }
+
+    .not-found--title {
+        margin-right: 0;
+        margin-bottom: 34px;
+    }
+
+    .not-found--content {
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 646px) {
+    .not-found--container {
+        margin: 80px 16px;
+    }
+
+    .not-found--title {
+        font-size: 84px;
+        margin-bottom: 18px;
+    }
+
+    .not-found--subtitle {
+        font-size: 34px;
+    }
 }
