Add Dimmer and Sidebar components with styling and integrate into layout

--- a/frontend/src/css/variables.css
+++ b/frontend/src/css/variables.css
@@ -12,6 +12,9 @@
     /* background colors */
     --green-bcg-color: #B4D27A;
 
+    /* hr colors */
+    --light-gray-hr-color: #EDEDED;
+
     /* header */
     --header-bcg-color: #fff;
 
