--- a/frontend/src/components/Sidebar/sidebar.css
+++ b/frontend/src/components/Sidebar/sidebar.css
@@ -1,5 +1,9 @@
 .sidebar-wrapper {
+    display: flex;
+    flex-flow: column nowrap;
     position: relative;
+    width: 100%;
+    height: 100%;
 }
 
 .sidebar--hr {
