--- a/frontend/src/css/button.css
+++ b/frontend/src/css/button.css
@@ -1,19 +1,59 @@
 .button {
-    display: inline-block;
     cursor: pointer;
     border: 0;
     border-radius: 4px;
     font-family: var(--text-font), sans-serif;
     font-size: 16px;
+    transition: all var(--animation-normal) ease;
 }
 
-.button__primary-padding {
+.button__padding {
     padding: 10px 16px;
 }
 
 .button__primary-color {
-    background-color: var(--primary-text-color);
-    color: var(--alternative-text-color);
+    background-color: var(--primary-btn-bcg-color-active);
+    color: var(--primary-btn-text-color-active);
+}
+
+.button__primary-color:hover {
+    background-color: var(--primary-btn-bcg-color-hover);
+    color: var(--primary-btn-text-color-active);
+}
+
+.button__primary-color:disabled {
+    background-color: var(--primary-btn-bcg-color-inactive);
+    color: var(--primary-btn-text-color-inactive);
+}
+
+.button__secondary-color {
+    background-color: var(--secondary-btn-bcg-color-active);
+    color: var(--secondary-btn-text-color-active);
+}
+
+.button__secondary-color:hover {
+    background-color: var(--secondary-btn-bcg-color-hover);
+    color: var(--secondary-btn-text-color-active);
+}
+
+.button__secondary-color:disabled {
+    background-color: var(--secondary-btn-bcg-color-inactive);
+    color: var(--secondary-btn-text-color-inactive);
+}
+
+.button__red-color {
+    background-color: var(--red-btn-bcg-color-active);
+    color: var(--red-btn-text-color-active);
+}
+
+.button__red-color:hover {
+    background-color: var(--red-btn-bcg-color-hover);
+    color: var(--red-btn-text-color-active);
+}
+
+.button__red-color:disabled {
+    background-color: var(--red-btn-bcg-color-inactive);
+    color: var(--red-btn-text-color-inactive);
 }
 
 .button__transparent-color {
