--- a/frontend/src/css/reset.css
+++ b/frontend/src/css/reset.css
@@ -7,7 +7,11 @@ h3,
 h4,
 h5,
 h6,
-p {
+p,
+span,
+label,
+a,
+List{
     margin: 0;
     padding: 0;
     font-family: var(--text-font), sans-serif;
