--- a/frontend/src/css/variables.css
+++ b/frontend/src/css/variables.css
@@ -38,10 +38,22 @@
     --link-btn-text-color-inactive: #A1A1A1;
 
     /* background colors */
+    --primary-bcg-color: #F9F5EC;
+    --secondary-bcg-color: #fff;
     --green-bcg-color: #B4D27A;
+
+    /* input colors */
+    --input-border-color-active: #AAAAAA;
+    --input-border-color-red: #F15831;
+
+    /* checkbox colors */
+    --checkbox-border-color-unmatched: #ADB3B9;
+    --checkbox-border-color-red: #F15831;
+    --checkbox-border-color-matched: #000;
 
     /* hr colors */
     --light-gray-hr-color: #EDEDED;
+    --panel-hr-color: #F0F0F0;
 
     /* header */
     --header-bcg-color: #fff;
