--- a/frontend/src/components/Header/header.css
+++ b/frontend/src/components/Header/header.css
@@ -30,6 +30,10 @@
     gap: 24px;
 }
 
+.nav-panel--search {
+    width: 225px;
+}
+
 .nav-panel--link {
     display: flex;
     align-items: center;
