--- a/frontend/src/css/checkbox.css
+++ b/frontend/src/css/checkbox.css
@@ -1,6 +1,10 @@
 .checkbox[type="checkbox"] {
     height: 16px;
     width: 16px;
+    min-height: 16px;
+    min-width: 16px;
+    max-height: 16px;
+    max-width: 16px;
     margin: 0;
     cursor: pointer;
     appearance: none;
