Refactor main page layout and add new components for participants, target audience, and benefits sections

--- a/frontend/src/components/Header/header.css
+++ b/frontend/src/components/Header/header.css
@@ -67,6 +67,10 @@
 }
 
 @media screen and (max-width: 646px) {
+    .header {
+        padding: 16px;
+    }
+
     .header--logo__disposal {
         display: none;
     }
