--- a/frontend/src/pages/Home/home.css
+++ b/frontend/src/pages/Home/home.css
@@ -3,28 +3,36 @@
     flex-direction: column;
 }
 
-/* Section */
+/* Container */
 
-.home--section {
+.container {
+    max-width: calc(1512px - 104px * 2);
+    margin: 0 auto;
+}
+
+.home--container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 80px 104px;
-    transition: all var(--animation-normal) ease;
 }
 
-.home--section__direction-row {
+.home--container__direction-row {
     flex-direction: row;
 }
 
-.home--section__text-align-center {
+.home--container__text-align-center {
     text-align: center;
 }
 
-.home--section__padding-low-vertical {
-    padding-top: 32px;
-    padding-bottom: 32px;
+.home--container__padding-wide {
+    padding: 80px 104px;
 }
+
+.home--container__padding-narrow {
+    padding: 32px 104px;
+}
+
+/* Section */
 
 .home--section__green {
     background: var(--green-bcg-color);
@@ -96,7 +104,6 @@
     grid-template-columns: repeat(4, 1fr);
     gap: 32px;
     grid-auto-rows: 1fr;
-    width: 100%;
 }
 
 .participants--grid-item {
@@ -180,19 +187,17 @@
     margin-bottom: 40px;
 }
 
-@media (min-width: 2000px) {
-    .home--section {
-        padding: 80px 300px;
+@media screen and (max-width: 1513px) {
+    .container {
+        max-width: calc(768px - 24px * 2);
     }
 
-    .participants--grid {
-        width: auto;
-    }
-}
-
-@media screen and (max-width: 1481px) {
-    .home--section {
+    .home--container__padding-wide {
         padding: 48px 24px;
+    }
+
+    .home--container__padding-narrow {
+        padding: 32px 24px;
     }
 
     .hero--section {
@@ -207,7 +212,7 @@
     }
 
     .hero--logo-title {
-        font-size: 48px;
+        font-size: 40px;
     }
 
     .hero--text-title {
@@ -220,7 +225,7 @@
     }
 
     .target--grid {
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(2, 1fr);
     }
 
     .benefits--grid {
@@ -228,13 +233,19 @@
     }
 }
 
-@media screen and (max-width: 995px) {
-    .target--grid {
-        grid-template-columns: repeat(2, 1fr);
+@media screen and (max-width: 769px) {
+    .container {
+        max-width: calc(375px - 16px * 2);
     }
-}
 
-@media screen and (max-width: 665px) {
+    .home--container__padding-wide {
+        padding: 40px 16px;
+    }
+
+    .home--container__padding-narrow {
+        padding: 32px 16px;
+    }
+
     .hero--logo-title {
         font-size: 34px;
     }
@@ -259,10 +270,6 @@
     .target--grid-item-title {
         text-align: center;
         font-size: 14px;
-    }
-
-    .home--section {
-        padding: 32px 16px;
     }
 
     .home--title {
