--- a/frontend/src/pages/Home/home.css
+++ b/frontend/src/pages/Home/home.css
@@ -5,15 +5,13 @@
 
 /* Container */
 
-.container {
-    max-width: calc(1512px - 104px * 2);
-    margin: 0 auto;
-}
-
 .home--container {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    max-width: calc(1512px - 104px * 2);
+    margin: 0 auto;
 }
 
 .home--container__direction-row {
@@ -188,7 +186,7 @@
 }
 
 @media screen and (max-width: 1513px) {
-    .container {
+    .home--container {
         max-width: calc(768px - 24px * 2);
     }
 
@@ -221,7 +219,7 @@
 
     .participants--grid {
         grid-template-columns: repeat(2, 1fr);
-        width: auto;
+        width: 100%;
     }
 
     .target--grid {
@@ -234,7 +232,7 @@
 }
 
 @media screen and (max-width: 769px) {
-    .container {
+    .home--container {
         max-width: calc(375px - 16px * 2);
     }
 
