--- a/frontend/src/pages/WhoWeAre/whoWeAre.css
+++ b/frontend/src/pages/WhoWeAre/whoWeAre.css
@@ -1,18 +1,17 @@
-.wwa {
+.who-we-are {
     background-color: var(--who-we-are-bcg-color);
     height: 100%;
 }
 
-.wwa--container {
+.who-we-are__container {
     padding: 80px 102px;
     align-content: center;
     height: calc(100% - 80px * 2);
-
     max-width: calc(1512px - 102px * 2);
     margin: 0 auto;
 }
 
-.wwa--title {
+.who-we-are__title {
     font-size: 40px;
     font-weight: 700;
     text-align: center;
@@ -20,60 +19,60 @@
     margin-bottom: 40px;
 }
 
-.wwa--content-container {
+.who-we-are__content {
     display: flex;
     padding: 0 104px;
     gap: 32px;
 }
 
-.wwa--content-text {
+.who-we-are__text {
     flex: 1;
     line-height: 24px;
 }
 
-.wwa--content-text__bold {
+.who-we-are__text--bold {
     font-weight: 600;
 }
 
-.wwa--content-text > :not(:last-child) {
+.who-we-are__text > :not(:last-child) {
     margin-bottom: 25px;
 }
 
-.wwa--content-image {
+.who-we-are__image-container {
     flex: 1;
 }
 
-.wwa--image {
+.who-we-are__image {
     border-radius: 6px;
     object-position: top;
     height: 340px;
 }
 
 @media screen and (max-width: 1513px) {
-    .wwa--container {
+    .who-we-are__container {
         height: auto;
         padding: 48px 24px;
         max-width: calc(768px - 24px * 2);
     }
 
-    .wwa--content-container {
+    .who-we-are__content {
         flex-direction: column;
         padding: 0 100px;
     }
 }
 
 @media screen and (max-width: 769px) {
-    .wwa--container {
+    .who-we-are__container {
         padding: 40px 16px;
         max-width: 520px;
     }
 
-    .wwa--title {
+    .who-we-are__title {
         font-size: 24px;
         margin-bottom: 24px;
     }
 
-    .wwa--content-container {
+    .who-we-are__content {
         padding: 0 0;
     }
 }
